--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
     "moment": "^2.29.1",
+    "youtube-playlist": "^1.0.4",
     "yt-search": "^2.3.2",
     "ytdl-core": "^3.3.0"
   }
